# dsd-nexus

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
.devcontainer/: Dockerfile  (+1 more)
examples/: CMakeLists.txt  dsd_convert.c  dsd_tools.c  dsdiff.c  sacd_vfs_usage.c  test_sacdpipe.c
extras/: CMakeLists.txt
extras/dsdctl/: CMakeLists.txt  cli_common.c  cli_common.h  cmd_convert.c  cmd_convert.h  cmd_extract.c  cmd_extract.h  cmd_info.c  cmd_info.h  main.c  sacd_print.c
extras/nexus-forge/: CMakeLists.txt  constants.xml  images.qrc  main.cpp
extras/nexus-forge/pipeline/: dsdconverter.cpp  dsdconverter.h  dsdpipeparameters.cpp  dsdpipeparameters.h  dsdprobe.cpp  dsdprobe.h  dsdworker.cpp  dsdworker.h  extractworker.cpp  extractworker.h  ps3driveworker.cpp  ps3driveworker.h
extras/nexus-forge/services/: constants.cpp  extensions.cpp  extensions.h  notificationservice-libnotify.cpp
extras/nexus-forge/ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addtaskdialog.cpp  addtaskdialog.h  convertlist.cpp  convertlist.h  convertlistdelegate.cpp  convertlistdelegate.h  dsdparamdialog.cpp  dsdparamdialog.h  extractdialog.cpp  extractdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionsdialog.cpp  optionsdialog.h  progressbarpainter.cpp  progressbarpainter.h
extras/ps3-drive/: CMakeLists.txt  ps3drive_tool.c
extras/sacd-vfs/: CMakeLists.txt  fuse_compat.h  fuse_main.c  fuse_ops.c  fuse_ops.h
libs/libdsdiff/: CMakeLists.txt
libs/libdsdiff/include/libdsdiff/: dsdiff.h  dsdiff_export.h
libs/libdsdiff/src/: dsdiff.c  dsdiff_chunks.c  dsdiff_chunks.h  dsdiff_io.c  dsdiff_io.h  dsdiff_markers.c  dsdiff_markers.h  dsdiff_types.h
libs/libdsdpcm/: CMakeLists.txt
libs/libdsdpcm/include/libdsdpcm/: dsdpcm.h
libs/libdsdpcm/src/: dsdpcm_fir_io.c  dsdpcm_internal.h  dsdpcm_wrapper.cpp
libs/libdsdpipe/: CMakeLists.txt
libs/libdsdpipe/include/libdsdpipe/: dsdpipe.h  dsdpipe_export.h  metadata_tags.h
libs/libdsdpipe/src/: dsdpipe.c  dsdpipe_internal.h  frame_queue.c  frame_queue.h  id3_parser.c  id3_parser.h  metadata.c  metadata_tags.c  reader_thread.c  reader_thread.h  sink_cuesheet.c  sink_dsdiff.c  sink_dsf.c  sink_flac.c  sink_id3.c  sink_print.c  sink_wav.c  sink_xml.c  source_dsdiff.c  source_dsf.c  source_sacd.c  track_select.c  transform_dsd2pcm.c  transform_dst.c
libs/libdsf/: CMakeLists.txt
libs/libdsf/include/libdsf/: dsf.h  dsf_export.h
libs/libdsf/src/: dsf.c  dsf_chunks.c  dsf_chunks.h  dsf_io.c  dsf_io.h  dsf_types.h
libs/libdst/: CMakeLists.txt
libs/libdst/include/libdst/: decoder.h  decoder_batch.h  dst_export.h
libs/libdst/src/: decoder.c  decoder_batch.c
libs/libps3drive/: CMakeLists.txt
libs/libps3drive/include/libps3drive/: ps3drive.h  ps3drive_error.h  ps3drive_types.h
libs/libps3drive/src/: ps3drive.c  ps3drive_auth.c  ps3drive_crypto.c  ps3drive_crypto.h  ps3drive_fw.c  ps3drive_info.c  ps3drive_internal.h  ps3drive_keys.h  ps3drive_pairing.c  ps3drive_sac.c
libs/libsacd/: CMakeLists.txt
libs/libsacd/include/libsacd/: sacd.h
libs/libsacd/proto/: sacd_ripper.pb.c  sacd_ripper.pb.h  sacd_ripper.proto
libs/libsacd/src/: sacd.c  sacd_area_toc.c  sacd_area_toc.h  sacd_charset.c  sacd_charset.h  sacd_dsd_reader.c  sacd_dsd_reader.h  sacd_dst_reader.c  sacd_dst_reader.h  sacd_frame_reader.h  sacd_genre_tables.c  sacd_helpers.c  sacd_input.c  sacd_input.h  sacd_input_file.c  sacd_input_network.c  sacd_input_ps3drive.c  sacd_master_toc.c  sacd_master_toc.h  sacd_pb_stream.c  sacd_pb_stream.h  sacd_sector_reader.h  sacd_specification.h
libs/libsacdvfs/: CMakeLists.txt
libs/libsacdvfs/include/libsacdvfs/: sacd_overlay.h  sacd_vfs.h  sacdvfs_export.h
libs/libsacdvfs/src/: sacd_id3.c  sacd_id3.h  sacd_overlay.c  sacd_overlay_internal.h  sacd_overlay_iso.c  sacd_overlay_path.c  sacd_vfs.c
libs/libsautil/: CMakeLists.txt  attributes.h  base64.c  base64.h  bprint.c  bprint.h  bswap.h  buffer.c  buffer.h  buffer_internal.h  c11threads.h  common.h  compat.h  cpu.c  cpu.h  dynarray.h  error.h  export.h  get_bits.h  getopt.h  internal.h  intmath.c  intmath.h  intreadwrite.h  ll.h  log.c  log.h  macros.h  mathops.h  mem.c  mem.h  mem_internal.h  reverse.h  sa_assert.h  sa_path.c  sa_path.h  sa_tpool.c  sa_tpool.h  sa_tpool_internal.h  sastring.c  (+12 more)
libs/libsautil/aarch64/: intreadwrite.h  timer.h
libs/libsautil/arm/: bswap.h  intmath.h  timer.h
libs/libsautil/configs/android/arm-neon/: config.h
libs/libsautil/configs/android/arm64/: config.h
libs/libsautil/configs/android/ia32/: config.asm  config.h
libs/libsautil/configs/android/mips64el/: config.h
libs/libsautil/configs/android/mipsel/: config.h
libs/libsautil/configs/android/x64/: config.asm  config.h  config_components.h
libs/libsautil/configs/ios/x64/: config.asm
libs/libsautil/configs/linux-noasm/x64/: config.h
libs/libsautil/configs/linux/arm/: config.h
libs/libsautil/configs/linux/arm-neon/: config.h
libs/libsautil/configs/linux/arm64/: config.h
libs/libsautil/configs/linux/ia32/: config.asm  config.h
libs/libsautil/configs/linux/riscv64/: config.h
libs/libsautil/configs/linux/x64/: config.asm  config.h
libs/libsautil/configs/mac/arm64/: config.h
libs/libsautil/configs/mac/universal/: config.h  config_components.h
libs/libsautil/configs/mac/x64/: config.h
libs/libsautil/loongarch/: timer.h
libs/libsautil/mips/: intreadwrite.h
libs/libsautil/ppc/: intreadwrite.h  timer.h
libs/libsautil/riscv/: bswap.h  intmath.h
libs/libsautil/x86/: bswap.h  intmath.h  intreadwrite.h  timer.h
libs/libsg3/: CMakeLists.txt  config.h.in  portable.h  sg_cmds_basic.c  sg_cmds_basic.h  sg_cmds_basic2.c  sg_cmds_extra.c  sg_cmds_mmc.c  sg_cmds_ps3.c  sg_cmds_ps3.h  sg_lib.c  sg_lib.h  sg_pt.h  sg_pt_common.c  sg_pt_linux.c  sg_pt_win32.c  sg_unaligned.h
tests/: CMakeLists.txt  bench_overlay.c  test_dsdiff_file.c  test_dsdiff_io.c  test_dsdiff_markers.c  test_dsdiff_modify.c  test_dsdiff_read.c  test_dsdiff_write.c  test_dsf_file.c  test_dst_reader.c  test_dst_write.c  test_sacd_vfs.c  test_sacd_vfs_id3.c  verify_vfs_dsd.c
(+40 files in other folders)
